Done responsive and spacing issue in mobile view

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
 
+
+@theme {
+  --breakpoint-xs: 30rem;
+}
+
 :root {
   font-family: var(--font-Outfit-sans), sans-serif;
   --color-primary:#5044e5;
